# MSE-433-Module-4

./: .gitignore  AFib_Prep_Phase_Qualitative_Notes.xlsx  Makefile  README.md  main.py  outlier_analysis.py  pyproject.toml  requirements.txt  run_all.py
app/backend/: export_dashboard_data.py  reassignment_data.py  whatif_simulator.py
app/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
app/frontend/src/: App.tsx
app/frontend/src/components/: Layout.tsx  OutlierDeepDive.tsx  Overview.tsx  PatientReassignment.tsx  PhysicianComparison.tsx  PrepTracker.tsx  RepositioningAnalysis.tsx  ShapExplorer.tsx  Trends.tsx  WhatIfSimulator.tsx
app/frontend/src/data/: prepTrackerSeed.ts
app/frontend/src/types/: index.ts  prepTracker.ts
src/: additional.py  checklist_simulation.py  checklist_validation.py  config.py  data_loader.py  eda.py  export.py  feature_eng.py  model.py  per_physician.py  prep_data_gen.py  prep_quant_analysis.py  viz.py
