[project]
name = "mse433-module4"
version = "0.1.0"
description = "Outlier Analysis of PFA Ablation Procedures"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5",
    "lightgbm>=4.6",
    "matplotlib>=3.10",
    "numpy>=2.4",
    "openpyxl>=3.1",
    "pandas>=3.0",
    "pillow>=12.1",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "seaborn>=0.13",
    "shap>=0.51",
    "tqdm>=4.67",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "main.py", "run_all.py"]

[project.scripts]
main = "main:main"
run-all = "run_all:run_all"
